# dig-session

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: codeql.yml  publish.yml  release.yml
src/: error.rs  lib.rs  master_seed.rs  session.rs  unlocked.rs
tests/: facade.rs  master_seed.rs
