[package]
name = "dig-session"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "DIG session/keystore layer: unlock identity signing keys and inject signing primitives. Composes dig-keystore (encrypted key storage) + dig-identity (canonical BLS identity derivation) behind one curated, custody-safe facade."
license = "GPL-2.0-only"
repository = "https://github.com/DIG-Network/dig-session"
homepage = "https://github.com/DIG-Network/dig-session"
documentation = "https://docs.rs/dig-session"
readme = "README.md"
keywords = ["dig-network", "session", "keystore", "identity", "bls"]
categories = ["cryptography::cryptocurrencies"]
# Ship only the library surface to crates.io. Explicit allow-list because the
# repo also tracks CI workflow files and build artefacts that must NOT end up in
# the published tarball.
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "SPEC.md",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE*",
]

[dependencies]
# Encrypted, per-scheme secret-key storage (unlock -> SignerHandle). crates.io only.
dig-keystore = "0.4"
# Canonical DIG identity BLS derivation (master_secret_key_from_seed +
# derive_identity_sk at m/12381'/8444'/9'/0'). crates.io only.
dig-identity = { version = "0.4", features = ["bls"] }
# Memory hygiene: the derived-secret BYTE BUFFERS we own (the enrolled
# key's canonical bytes and the transient 32-byte extraction) are wrapped in
# `Zeroizing`, so they are wiped on drop. NOTE: the transient
# `chia_bls::SecretKey` scalars produced by dig-identity's derivation are a
# foreign type with no `Zeroize`/`Drop` impl and cannot be wiped in place;
# they are instead confined to the smallest scope and dropped immediately.
zeroize = "1.7"
thiserror = "1"
# Per-profile DEK derivation. Versions pinned to MATCH dig-app's DEK construction
# (dig-app-core keystore/secrets.rs) byte-for-byte: HKDF-SHA256, RFC 5869. A
# different hkdf/sha2 major here would risk a different DEK and break at-rest
# back-compat (§5.1) for every already-sealed profile blob.
hkdf = "0.12"
sha2 = "0.10"
# Single source of truth for the frozen profile-DEK byte contract (DEK_SALT,
# IDENTITY_IKM_VERSION, PROFILE_DEK_LABEL, SYMMETRIC_KEY_LEN) — see SPEC.md.
dig-constants = "0.7"

[dev-dependencies]
dig-keystore = { version = "0.4", features = ["testing"] }
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
